
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__ repl_state; int unixtime; int repl_down_since; int * master; } ;


 int REDISMODULE_EVENT_MASTER_LINK_CHANGE ;
 int REDISMODULE_SUBEVENT_MASTER_LINK_DOWN ;
 scalar_t__ REPL_STATE_CONNECT ;
 scalar_t__ REPL_STATE_CONNECTED ;
 int moduleFireServerEvent (int ,int ,int *) ;
 TYPE_1__ server ;

void replicationHandleMasterDisconnection(void) {

    if (server.repl_state == REPL_STATE_CONNECTED)
        moduleFireServerEvent(REDISMODULE_EVENT_MASTER_LINK_CHANGE,
                              REDISMODULE_SUBEVENT_MASTER_LINK_DOWN,
                              ((void*)0));

    server.master = ((void*)0);
    server.repl_state = REPL_STATE_CONNECT;
    server.repl_down_since = server.unixtime;



}
